@@ -23,6 +23,7 @@ import org.codehaus.groovy.control.CompilationFailedException;
 import org.codehaus.groovy.runtime.MethodClosure;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 
 /**
  * Tests some particular script features.
@@ -36,13 +37,13 @@ public class ScriptTest extends TestSupport {
      * @throws IllegalAccessException
      * @throws InstantiationException
      */
-    public void testInvokeMethodFallsThroughToMethodClosureInBinding() throws IOException, CompilationFailedException, IllegalAccessException, InstantiationException {
+    public void testInvokeMethodFallsThroughToMethodClosureInBinding() throws IOException, CompilationFailedException, IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
         String text = "if (method() == 3) { println 'succeeded' }";
 
         GroovyCodeSource codeSource = new GroovyCodeSource(text, "groovy.script", "groovy.script");
         GroovyClassLoader loader = new GroovyClassLoader(Thread.currentThread().getContextClassLoader());
         Class clazz = loader.parseClass(codeSource);
-        Script script = ((Script) clazz.newInstance());
+        Script script = ((Script) clazz.getDeclaredConstructor().newInstance());
 
         Binding binding = new Binding();
         binding.setVariable("method", new MethodClosure(new Dummy(), "method"));
